Mon Jul  5 13:56:57 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/ace.doxygen:
        * etc/ace_qos.doxygen:
        * etc/ace_rmcast.doxygen:
        * etc/ace_ssl.doxygen:
        * etc/acexml.doxygen:
          Disable include and included graphs, this should reduce the size
          of the documentation a lot

Mon Jul  5 13:29:23 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_doxygen.pl:
          Some preparations to move the DAnCE doxygen files to DAnCE

        * docs/bczar/bczar.html:
          Updated release notes, made it possible to generate doxygen on
          a regular system instead of on naboo, the side effect is that the
          doxygen packages on naboo are 350Mb, on FC13 with all latest tools
          they are 1.4GB

Mon Jul  5 11:22:09 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Select_Reactor_Base.cpp:
          Fixed doxygen warning

        * etc/ace.doxygen:
        * etc/ace_man.doxygen:
        * etc/ace_qos.doxygen:
        * etc/ace_rmcast.doxygen:
        * etc/ace_ssl.doxygen:
        * etc/acexml.doxygen:
          Define ACE_INLINE as inline and not as 1

Mon Jul  5 10:56:15 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao.spec-release.patch:
          Removed this file.

Mon Jul  5 09:11:21 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Download.html:
          Removed link to very old patches and fixed typo

Mon Jul  5 09:05:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Download.html:
          Updated filenames in text

Mon Jul  5 08:57:09 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Download.html:
          Update latest minor release to x.8.0

Mon Jul  5 08:19:17 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/diff-builds-and-group-fixed-tests-only.sh:
          Updated for x.8.0

        * bin/generate_rel_manpages: